--- a/package.json
+++ b/package.json
@@ -10,51 +10,35 @@
     "clean": "rimraf .next .swc out coverage",
     "lint": "next lint",
     "format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore",
-    "check-types": "tsc --noEmit --pretty && tsc --project cypress --noEmit --pretty",
-    "test": "jest",
+    "check-types": "tsc --noEmit --pretty",
     "commit": "cz",
-    "cypress": "cypress open",
-    "cypress:headless": "cypress run",
-    "e2e": "start-server-and-test dev http://localhost:3000 cypress",
-    "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless",
-    "storybook": "storybook dev -p 6006",
-    "storybook:build": "storybook build",
-    "storybook:serve": "http-server storybook-static --port 6006 --silent",
-    "serve-storybook": "run-s storybook:*",
-    "test-storybook:ci": "start-server-and-test serve-storybook http://localhost:6006 test-storybook",
     "prepare": "husky install",
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.16",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "next": "^13.4.13",
     "next-seo": "^6.1.0",
     "next-sitemap": "^4.1.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "styled-breakpoints": "^12.1.5",
+    "styled-components": "^6.0.7",
+    "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
     "@commitlint/cz-commitlint": "^17.6.7",
     "@next/bundle-analyzer": "^13.4.13",
-    "@percy/cli": "^1.26.3",
-    "@percy/cypress": "^3.1.2",
+    "@rocketseat/eslint-config": "^2.1.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@storybook/addon-essentials": "^7.0.27",
-    "@storybook/addon-interactions": "^7.0.27",
-    "@storybook/addon-links": "^7.0.27",
-    "@storybook/blocks": "^7.0.27",
-    "@storybook/nextjs": "^7.0.27",
-    "@storybook/react": "^7.0.27",
-    "@storybook/test-runner": "^0.11.0",
-    "@storybook/testing-library": "^0.2.0",
-    "@testing-library/cypress": "^9.0.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.3",
     "@types/node": "^20.4.8",
     "@types/react": "^18.2.18",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "autoprefixer": "^10.4.14",
@@ -83,16 +67,12 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "http-server": "^14.1.1",
     "husky": "^8.0.3",
-    "jest": "^29.6.2",
-    "jest-environment-jsdom": "^29.6.2",
     "lint-staged": "^13.2.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.27",
     "prettier": "^3.0.1",
     "rimraf": "^5.0.1",
     "semantic-release": "^19.0.5",
-    "start-server-and-test": "^2.0.0",
-    "storybook": "^7.0.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   },
