--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "dependencies": {
     "@headlessui/react": "^1.7.16",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@tailwindcss/forms": "^0.5.4",
     "next": "^13.4.13",
     "next-seo": "^6.1.0",
     "next-sitemap": "^4.1.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
     "styled-breakpoints": "^12.1.5",
     "styled-components": "^6.0.7",
