feat(finish): finish v1

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^13.4.13",
     "next-seo": "^6.1.0",
     "next-sitemap": "^4.1.8",
+    "nodemailer": "^6.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
@@ -38,7 +39,8 @@
     "@rocketseat/eslint-config": "^2.1.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@types/node": "^20.4.8",
+    "@types/node": "^20.5.0",
+    "@types/nodemailer": "^6.4.9",
     "@types/react": "^18.2.18",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
