--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@headlessui/react": "^1.7.16",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@tailwindcss/forms": "^0.5.4",
+    "@vercel/analytics": "^1.0.2",
     "next": "^13.4.13",
     "next-seo": "^6.1.0",
     "next-sitemap": "^4.1.8",
