--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-WHATSAPP_MESSAGE=Olá, gostaria de saber mais sobre os serviços da OtimizaMedia.
-WHATSAPP_NUMBER=5599999999999 
+NEXT_PUBLIC_WHATSAPP_MESSAGE=Olá, gostaria de saber mais sobre os serviços da OtimizaMedia.
+NEXT_PUBLIC_WHATSAPP_NUMBER=5599999999999 
+NEXT_PUBLIC_SANITY_PROJECT_ID=
+NEXT_PUBLIC_SANITY_DATASET=
