--- a/package.json
+++ b/package.json
@@ -17,19 +17,28 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
+    "@portabletext/react": "^3.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@sanity/client": "^6.4.6",
+    "@sanity/icons": "^2.0.0",
+    "@sanity/image-url": "1",
+    "@sanity/types": "^3.0.0",
+    "@sanity/ui": "^1.0.0",
+    "@sanity/vision": "3",
     "@tailwindcss/forms": "^0.5.4",
     "@vercel/analytics": "^1.0.2",
-    "next": "^13.4.13",
+    "next": "^13.0.0",
+    "next-sanity": "^5.4.0",
     "next-seo": "^6.1.0",
     "next-sitemap": "^4.1.8",
     "nodemailer": "^6.9.4",
-    "react": "^18.2.0",
+    "react": "^18.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
+    "sanity": "^3.0.0",
     "styled-breakpoints": "^12.1.5",
-    "styled-components": "^6.0.7",
+    "styled-components": "^5.2.0",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
@@ -43,7 +52,7 @@
     "@types/node": "^20.5.0",
     "@types/nodemailer": "^6.4.9",
     "@types/react": "^18.2.18",
-    "@types/styled-components": "^5.1.26",
+    "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "autoprefixer": "^10.4.14",
